# pdr

./: .coveragerc  .gitignore  .mailmap  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  Example_Jupyter_Notebook.ipynb  LICENSE  LICENSE.md  MANIFEST.in  README.md  SupportedDataset.md  environment.yml  jgmro_110b2_sha.lbl  jgmro_110b2_sha.tab  minimal_environment.yml  mkdocs.yml  pyproject.toml  setup.py  special_environment.yml  supported_datasets.md
.binder/: environment.yml
.github/scripts/: adjust-coverage-config  find-gnu-tar  make-venv  validate-environment  validate-python
.github/workflows/: ci-conda.yml  ci-unittest.yml  draft-pdf.yml  main.yml
docs/: LICENSE.md  code_of_conduct.md  environment.yml  index.md  pdr_api.md  pdr_internal_api.md  supported_datasets.md  version_history.md
docs/joss_paper/: paper.md
joss_paper/: paper.bib  paper.md
pdr/: __init__.py  _scaling.py  badpvl.py  bit_handling.py  browsify.py  datatypes.py  debayer.py  downloaders.py  errors.py  func.py  np_utils.py  parse_components.py  pd_utils.py  pdr.py  pdrtypes.py  pds4_datatypes.py  pil_utils.py  pilutils.py  pvl_utils.py  rasterio_utils.py  utils.py  vax.py
pdr/_patches/: __init__.py  patches.py  tkinter_stub.py
pdr/formats/: __init__.py  cassini.py  ch1_esa.py  ch2_isro.py  change.py  checkers.py  clementine.py  core.py  dawn.py  diviner.py  epoxi.py  galileo.py  ground.py  (+43 more)
tests/: conftest.py  test_browsify.py  test_data.py  test_func.py  test_image.py  test_loader_helpers.py  test_metadata.py  test_np_utils.py  test_parselabel_pds3.py  test_parselabel_pds4.py  test_queries.py
user_guides/: 1_Example_Jupyter_Notebook.ipynb  2_dump_browse_User_Guide.ipynb  2_dump_browse_guide.ipynb
(+198 files in other folders)
