# pyproject.toml documentation for reference:
#   https://packaging.python.org/en/latest/
#   https://setuptools.pypa.io/en/latest/userguide/

[project]
name        = "pdr"
version     = "1.3.0"
description = "Planetary Data Reader"
readme      = "README.md"
license     = { file = "LICENSE.md" }

authors     = [
    { name = "Chase Million",     email = "chase@millionconcepts.com"    },
    { name = "Michael St. Clair", email = "mstclair@millionconcepts.com" },
    { name = "Sierra Brown",      email = "sierra@millionconcepts.com"   },
    { name = "Sabrina Curtis",    email = "scurtis@millionconcepts.com"  },
    { name = "Zack Weinberg",     email = "zack@millionconcepts.com"     },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.9"
dependencies = [
    "dustgoggles",
    "more_itertools",
    "multidict",
    "numpy",
    "pandas>=2.0.0",
    "rms-vax"
]

[project.optional-dependencies]
pillow        = ["pillow"]
fits          = ["astropy"]
notebooks     = ["jupyter"]
pvl           = ["pvl"]
tests         = ["pytest"]
fuzzy         = ["Levenshtein"]

[project.urls]
Repository = "https://github.com/MillionConcepts/pdr"

[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdr*"]
namespaces = false

# Recommended for new projects by pytest manual.
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
